--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
+  /* background-color: #090E10 !important; */
+    background-color: unset !important;
+    background-image: linear-gradient(180deg, #CEE5FD, #FFF);
+    background-size: 100% 40%;
+    background-repeat: no-repeat;
 }
 
 code {
